--- a/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/04.md
+++ b/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/04.md
@@ -23,9 +23,10 @@ title = "०४"
 गार्ग्यो हवै बालाकिरनूचान: संस्पष्ट आस ॥ **१** ॥
 </details>
 
+<details><summary>रङ्गरामानुजः</summary>
+
 बलाकस्यापत्यं बालाकिः, गोत्रतो गार्ग्य:, अनूचान: - अङ्गाध्यायी । अङ्गाध्याय्यनूचानःइति स्मृतेः । संस्पष्टः - सम्यक् विद्यया प्रख्यातः एवम्भूतस्सन् आस - बभूव ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -36,10 +37,11 @@ title = "०४"
 
 सोऽवसदुशीनरेषु सत्त्वमत्स्येषु कुरुपाञ्चालेषु काशीविदेहेष्विति ॥ **२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 स: - बालाकिः उशीनरेषु सत्त्वप्रचुरमत्स्यदेशेषु कुरुपाञ्चालेषु काशीविदेहेषु उवास - उषितवान् ।इतिशब्दः प्रकारवचनः । एवञ्जातीयकेष्वन्येष्वपीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -50,10 +52,11 @@ title = "०४"
 
 स हाजातशत्रुं काश्यमेत्योवाच ॥ **३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अजातशत्रुनामानं “काशीराजम”भिगत्योवाच ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -64,10 +67,11 @@ title = "०४"
 
 ब्रह्म ते ब्रवाणीति । तं होवाचाजातशत्रुः, सहस्रं दद्म एतस्यां वाचि ;जनको जनक इति ह वै जना धावन्ति इति ॥ **४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 किमिति ? ब्रह्म ते ब्रवाणीति । एतस्यामेव वाचि निमित्ते गवां सहस्रं प्रयच्छामि । सर्वेऽपिब्रह्मविदः, जनक एव ब्रह्म शुश्रूषुः दाता चेति जनकस्य समीपमेव धावन्ति । भवांस्तु मत्समीपमागत्य, ब्रह्म तेब्रवाणीत्युक्तवान् । अनेनैव वाक्येन तोषिता वयं सहस्रं प्रयच्छाम इति भावः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -78,10 +82,11 @@ title = "०४"
 
 स होवाच बालाकिः, 'य एवैष आदित्ये पुरुषः, तमेवाहमुपासे इति' ॥ **५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 आदित्यमण्डलान्तर्वर्तिनं पुरुषं ब्रह्मेत्यहमुपासे । अतः त्वमपि तमेवोपास्स्वेति भावः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -92,10 +97,11 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । बृहन् पाण्डरवासाःअतिष्ठाः सर्वेषां भूतानां मूर्धेति वा अहमेतमुपासे इति' ॥ **६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 मा - मां प्रति एतस्मिन् आदित्यवर्तिपुरुषविषये संवादं मा कारय । अज्ञाते हि विषये संवादःकारयितव्यः । अयं तु ज्ञात एव । कथमित्यवाह, बृहन् पाण्डरवासा: सर्वेषां भूतानां मूर्धेति वाअहमेतमुपास इति । वैशब्दोऽवधारणे । बृहन् महान् । पाण्डराणि किरणरूपाणि वासांसि यस्य सःपाण्डरवासाः । आदित्यकिरणानां नानारूपत्वात् पाण्डरवासस्त्वमिति द्रष्टव्यम् । बृहदारण्यकेबालाक्यजातशत्रुसंवादे बृहत्त्वपाण्डरवासस्त्वे चन्द्रधर्मतया उक्ते ; इह तु आदित्यधर्मतया उक्ते इतिविशेषः । अतिष्ठाः - सर्वमपि कार्यमतिक्रम्य तिष्ठतीति अतिष्ठाः । सर्वेषां भूतानां मूर्धा श्रेष्ठः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -106,10 +112,11 @@ title = "०४"
 
 स यो हैतमेवमुपास्ते, अतिष्ठाः सर्वेषां भूतानां मूर्धा भवति । स होवाच बालाकिः, य एवैष चन्द्रमसि पुरुषः, तमेवाहमुपास इति । तं होवाचाजातशत्रुः,मा मैतस्मिन् संवादयिष्ठाः । सोमो राजा अन्नस्यात्मेति वा अहमेतमुपास इति । सयो हैतमेवमुपास्ते, अन्नस्यात्मा भवति ॥ **७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तदुपासनस्यानुरूपं फलमाह - अन्नस्य - व्रीहियवादिरूपौषधिवर्गस्य । आत्मा। प्रियत्वाद्वा,चन्द्रमसः सर्वरसात्मत्वेन तत्स्वरूपत्वाद्वा, अमावास्यायां चन्द्रस्य सर्वोषध्यनुप्रवेशश्रवणाद्वा चन्द्रस्य अन्नात्मत्वम्॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -120,10 +127,11 @@ title = "०४"
 
 स होवाच बालाकिः, 'य एवैष विद्युति पुरुषः, तमेवाहमुपासे इति । तंहोवाचाजातशत्रुः, मा मैतस्मिन् संवादयिष्ठाः । तेजस्यात्मेति वा अहमेतमुपासेइति' । स यो हैतमेवमुपास्ते, तेजस्यात्मा भवति ॥ **८**॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तेजस्यात्मा - तेजस्विस्वरूप इत्यर्थः । तेजस आत्मेति पाठेऽपि स एवार्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -134,10 +142,11 @@ title = "०४"
 
 स होवाच बालाकिः, य एवैष स्तनयित्नौ पुरुषः, तमेवाहमुपासे इति । तंहोवाचाजातशत्रुः, मा मैतस्मिन् संवादयिष्ठाः । शब्दस्यात्मेति वा अहमेतमुपासेइति । स यो हैतमेवमुपास्ते, शब्दस्यात्मा भवति ॥ **९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 स्तनयित्नुसहितस्य मेघस्य शब्दप्रधानत्वात् शब्दात्मत्वम् । शिष्टं स्पष्टम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -148,10 +157,11 @@ title = "०४"
 
 स होवाच बालाकिः, 'य एवैष आकाशे पुरुषः, तमेवाहमुपासे इति । तंहोवाचाजातशत्रुः, मा मैतस्मिन् संवादयिष्ठाः । पूर्णमप्रवर्ति ब्रह्मेति वा अहमेतमुपासेइति । स यो हैतमेवमुपास्ते, पूर्यते प्रजया पशुभिः । नो एव स्वयम् । नास्य प्रजापुरा कालात् प्रवर्तते ॥ **१०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 पूर्णत्वविशिष्टोपासानायाः फलम् , पूर्यते प्रजया पशुभिरिति । पूर्णत्वप्रयुक्तनिर्व्या- पारत्वलक्षणाप्रवर्तित्वविशिष्टोपासनायाः फलम् , नो एव स्वयमित्यादि । स्वयमपि, तत्पुत्रपौत्रादिकं वान शास्त्रानुशिष्टशतायुष्ट्वकालात् प्राक् अस्माल्लोकात् प्रवर्तते । नास्य सन्ततावपमृत्युः भवति इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -162,10 +172,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष वायौ पुरुष: तमेवाहमुपासे इति । तंहोवाचाजातशत्रुः, मामैतस्मिन् संवादयिष्ठाः । इन्द्रो वैकुण्ठोऽपराजिता सेनेति वाअहमेतमुपास’ इति । स यो हैतमेवमुपास्ते, जिष्णुर्हवा अपराजिष्णुरन्यतस्त्यजायीभवति ॥ **११** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 इन्द्रः - ईश्वरः । योऽयं पवते एष देवानां गृहाः ( ) इति वायोर्देवलोकत्वप्रसिद्धेः लोकत्वेनवैकुण्ठसादृश्याद्वैकुण्ठत्वम् । मरुतां गणत्वप्रसिद्धेः सेना । जिष्णु: - जयशीलः । अपराजिष्णुः -अपराजितः । अन्यतस्त्यजायी। अन्यतो भवा अन्यतस्त्याः । शत्रव इति यावत् । तान् जेतुं शीलमस्य ।सुप्यजातो..... (पा.सू.३-५-७८) इति णिनिः । शिष्टं स्पष्टम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -176,10 +187,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैषोऽग्नौ पुरुषः तमेवाहमुपासे इति । तंहोवाचाजातशत्रू:, मा मैतस्मिन् संवादयिष्ठाः । विषासहिरिति वा अहमेतमुपासेइति । स यो हैतमेवमुपास्ते, विषासहिर्हैवैष भवति ॥ **१२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 विषासहिः । सोढुमशक्यः शत्रुभिरित्यर्थः । मर्षयितेति वाऽर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -190,10 +202,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैषोऽप्सु पुरुषः, तमेवाहमुपास इति । तंहोवाचाजातशत्रुः, मा मैतस्मिन् संवादयिष्ठाः । नाम्नस्त्वात्मेति वा अहमेतमुपासे इति ।स यो हैतमेवमुपास्ते, नाम्नस्त्वात्मा भवति’ ॥ **१३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 नाम्नस्त्वात्मा। नामाधिष्ठात्री देवतेत्यर्थः । शिष्टं स्पष्टम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -204,10 +217,11 @@ title = "०४"
 
 इत्यधिदैवतम् । अथाध्यात्मम् ॥ **१४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 देवतायामुपासनप्रकार उक्तः । आत्मन्युपासनप्रकार उच्यत इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -218,10 +232,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष आदर्श पुरुषः, तमेवाहमुपास’ इति । तंहोवाचाजातशत्रुः, मामैतस्मिन् संवादयिष्ठाः । प्रतिरूप इति वा अहमेतमुपासइति । ‘स यो हैतमेवमुपास्ते, प्रतिरूपो हैवास्य प्रजा स्वयमाजायतेनाप्रतिरूप:’ ॥ **१५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्रतिरूपः । प्रतिबिम्ब इत्यर्थः । अस्य सन्ततावनुरूप एव पुत्रो जायते । नाननुरूपः ।प्रतिबिम्बस्य कार्यकारणसंघातलक्षणात्मशब्दिताभिन्नत्वादध्यात्मान्तर्गतत्वमिति द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -232,10 +247,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष प्रतिश्रुत्कायां पुरुषः, तमेवाहमुपास’ इति ।तं होवाचाजातशत्रुः, ‘मामैतस्मिन् संवादयिष्ठाः, द्वितीयोऽनपगम इति वा अहमेतमुपासइति । स यो हैतमेवमुपास्ते, विन्दते द्वितीयाम् ; द्वितीयवान् भवति’ ॥ **१६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्रतिश्रुत्कायां - प्रतिध्वनौ । द्वितीयः पूर्वशब्दापेक्षया द्वितीयः । अनपगम: - नापगच्छतिइत्यनपगमः। द्वितीयाम् - आत्मापेक्षया द्वितीयां भार्यां विन्दते - लभत इत्यर्थः। द्वितीयवान् भवति।पुत्रेण द्वितीयवांश्च भवतीत्यर्थः । विन्दते द्वितीयमिति पाठे द्वितीयं पुत्रं विन्दते । अनपगमत्वोपासनाफलमुच्यतेद्वितीयवान् भवतीति नित्ययोगे मतुप् । नित्यं पुत्रसहितो भवतीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -246,10 +262,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष शब्दः पुरुषमन्वेति, तमेवाहमुपासे’ इति ।तं होवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः, असुरिति वा अहमेतमुपासे इति ।स यो हैतमेवमुपास्ते, नो एव स्वयम् , नास्य प्रजा पुरा कालात्संमोहमेति ॥ **१७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 पुरुषमन्वेति । गुहादौ पुरुषशब्दानुकारिवर्णात्मकः प्रतिशब्द इत्यर्थः । असुरिति वा अहमेतमुपासइति तादृशशब्दस्य प्राणबललभ्यतया असुरित्युपासे इत्यर्थः । नो...... एति । स्वयं वा तत्सन्ततिर्वाअकाले मूर्छा मरणं न प्राप्नोति इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -260,10 +277,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष च्छायायां पुरुषः, तमेवाहमुपासे’ इति । तंहोवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । मृत्युरिति वा अहमेतमुपासे इति । सयो हैतमेवमुपास्ते, नो एव स्वयम् , नास्य प्रजा पुरा कालात् प्रमीयते’ ॥ **१८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 नीलत्वभयङ्करत्वादिमृत्युसादृश्यात् छायापुरुषस्य मृत्युत्वेनोपासनमिति द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -274,10 +292,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष शारीरः पुरुषः, तमेवाहमुपासे’ इति । तंहोवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । प्रजापतिरिति वा अहमेतमुपासेइति । स यो हैतमेवमुपास्ते, प्रजायते प्रजया पशुभिः’ ॥ **१९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 शारीरः । शरीरे अहमित्यभिमन्यमानः पुरुषः शारीरः । तस्य पुत्रपौत्रादिलक्षणप्रजोत्पादकत्व-रक्षकत्वादिना प्रजापतित्वम् । प्रजया पशुभिः प्रजायते । प्रजया पशुभिश्च प्रकृष्टो जायत इत्यर्थः ।शिष्टं स्पष्टम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -288,10 +307,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष प्राज्ञ आत्मा येनैतत् सुप्तः स्वमायाचरति,तमेवाहमुपासे’ इति । तं होवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । यमोराजेति वा अहमेतमुपासे इति । स यो हैतमेवमुपास्ते, सर्वं हास्मा इदं श्रैष्ठ्याययम्यते’ ॥ **२०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्राज्ञ: - जाग्रद्दशायां प्रज्ञाशाली अयमात्मा एतत्सुप्तः - एतत् सुप्तं यस्य - एतादृशसुप्तिविशिष्टस्सन् -उपरतबाह्येन्द्रिय इति यावत् - येन स्वप्नायाचरति - येन मनसा विशिष्टस्सन् स्वप्नाय प्रवर्तते स्वप्नात्पदार्थान् पश्यति, तत् मनो ब्रह्मोपास इत्यर्थः । यमः - सर्वेन्द्रिययमयितृत्वात् मनसो यमत्वम् , श्रैष्ठ्यायराजत्वं द्रष्टव्यम् । श्रैष्ठ्याय यम्यते । अस्य श्रैष्ठ्याय सर्वमपि भूतजातं यम्यते । यतत इति यावत् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -302,10 +322,11 @@ title = "०४"
 
 स होवाच बालाकिः, ‘य एवैष दक्षिणेऽक्षन् पुरुषः तमेवाहमुपासे’ इति । तेहोवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । नाम्न आत्मा अग्नेरात्मा ज्योतिषआत्मेति वा अहमेतमुपासे इति । स यो हैतमेवमुपास्ते, एतेषां सर्वेषामात्मा भवति’ ।स होवाच बालाकिः, ‘य एवैष सव्येऽक्षन् पुरुषस्तमेवाहमुपासे’ इति । ।होवाचाजातशत्रुः, ‘मा मैतस्मिन् संवादयिष्ठाः । सत्यस्यात्मा विद्युत आत्मा तेजसआत्मेति वा अहमेतमुपासे इति । स यो हैतमेवमुपास्ते, एतेषां सर्वेषामात्माभवति’ ॥ **२१** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 दक्षिणाक्षिप्रतिबिम्बे नामाग्निज्योतिरात्मत्वदृष्टौ नामाग्निज्योतिरात्मत्वं भवति । सव्याक्षिप्रतिबिम्बेसत्यविद्युत्तेज आत्मत्वबुद्धौ सत्यविद्युत्तेज आत्मत्वं भवति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -316,10 +337,11 @@ title = "०४"
 
 ततो ह बालाकिस्तूष्णीमास ॥ **२२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उत्तरापरिस्फूर्तेरिति शेषः॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -330,10 +352,11 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, ‘एतावन्नु बालाके’ इति ॥ **२३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 हे बालाके ! एतावदेव खलु ते विदितमित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -344,10 +367,11 @@ title = "०४"
 
 एतावद्धीति होवाच बालाकिः ॥ **२४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एतावदेव मे विदितमित्युवाचेत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -358,10 +382,11 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, ‘मृषा वै किल मा संवादयिष्ठा: ब्रह्म तेब्रवाणीति’ ॥ **२५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 ब्रह्म ते ब्रवाणीति मृषोक्त्या मां मृषैव संवादयिष्ठाः - संवादं कारितवानसि । एतावन्तंकालमब्रह्मवाद एव प्रवृत्त इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -372,10 +397,11 @@ title = "०४"
 
 स होवाच, ‘यो वै बालाके एतेषां पुरुषाणां कर्ता, यस्य वैतत् कर्म, स वैवेदितव्यः’ इति ॥ **२६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तर्हि किं तत् वेदितव्यं ब्रह्मेत्यत्राह स होवाच यो वै.....वेदितव्य इति । वैशब्दोऽवधारणे।त्वया ब्रह्मत्वेनोपदिष्टानामादित्यादिपुरुषाणां य: कर्ता - ते यत्कार्यभूताः ; किं विशिष्याभिधीयते ; यस्यप्रत्यक्षादिसन्निधापितं चिदचिदरूपं समस्तं जगत् कर्म - कार्यम् - क्रियत इति व्युत्पत्त्या कर्मशब्दःकार्यवचनः- स एव वेदितव्यः ; न तु त्वदुपन्यस्ता आदित्यादय इति भावः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -386,10 +412,11 @@ title = "०४"
 
 तत उ ह बालाकिः समित्पाणिः प्रतिचक्राम, उपायानीति ॥ **२७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उशब्दोऽवधारणे । हशब्दः प्रसिद्धौ । एवमजातशत्रुणोक्तो बालाकिः गताभिमानो, नीचादप्युत्तमांविद्याम् , आपत्कल्पो ब्राह्मणस्या ब्राह्मणात् विद्योपयोगः इति शास्त्रमनुसृत्य क्षत्रियादप्यजातशत्रोर्विद्यामुपादित्सुः,नानुपसन्नाय ब्रह्मोपदेष्टव्यम् इति शास्वं जानन् समिद्भारहस्तः शिष्यस्सन् , उपगच्छामीति प्रववृते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -400,10 +427,11 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, ‘प्रतिलोमरूपमेव स्यात् यत् क्षत्रियो ब्राह्मणमुपनयेत् ।एहि व्येव त्वा ज्ञापयिष्यामीति’ ॥ **२८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 क्षत्रियो ब्राह्मणमुपनयेत् इति यत् , तत् विपरीतरूपमेव स्यात् । अतः एहि त्वामुपनयनमन्तरेणैवब्रह्म विज्ञापयिष्याम्येव ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -414,12 +442,13 @@ title = "०४"
 
 तं ह पाणावभिपद्य प्रवव्राज ॥ **२९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तं बालाकिं पाणौ गृहीत्वा निर्गत इत्यर्थः ॥
 
 \[सुप्तप्रबोधनम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -430,10 +459,11 @@ title = "०४"
 
 तौ ह सुप्तं पुरुषमीयतुः ॥ **३०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तौ- बालाक्यजातशत्रू राजभवने सुप्तं कञ्चित् पुरुषं प्राप्तवन्तावित्यर्थः । बालाक्यधिकरणभाष्ये,तौ ह सुप्तं पुरुषमाजग्मतुः (बृ.उ. ४-१-१५) इत्युदाहृतं वाक्यं बृहदारण्यकगतम् ; नैतच्छाखागतम् ।अत एव तत्र व्यासार्यैः, तौ ह सुप्तं पुरुषमीयतुः इति श्रुतिः इत्युक्तम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -444,10 +474,11 @@ title = "०४"
 
 तं हाजातशत्रुरामन्त्रयाञ्चक्रे, ‘बृहन् पाण्डरवासः सोमराजन्निति’ ॥ **३१** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्राणो वाव ज्येष्ठः श्रेष्ठश्च (छां.उ. ५-१-१) इति ज्यैष्ठ्यश्रैष्ट्यगुणेन प्राणस्य बृहत्त्वात्बृहन्नित्यामन्त्रणम् । पाण्डरवासस्त्वं च प्राणधर्मः । किं मे वासः (बृ.उ. ८-१-१४) इति प्राणेन पृष्टे,आपो वासः (बृ.उ. ८-१-१४) इति अपां प्राणवासस्त्वोक्तेः । तासाञ्चापाम् , यच्छुक्लम् , तदपाम्(छां.उ. ६-४-४) इति शुक्लवर्णाश्रयत्वात् पाण्डरत्वं युक्तम् । सप्तानब्राह्मणे, अथैतस्य प्राणस्याऽऽपः(बृ.उ. ३-५-१३) शरीरं ज्योतीरूपमसौ चन्द्रः इति प्राणस्य चन्द्रसंबन्धप्रतीतेः लक्षणया सोमेति प्राणस्यसंंबोधनम् । प्राणो वै सम्राट् (बृ.उ. ६-१-३) इति श्रवणात् राजन्नित्यामन्त्र्यत इति व्यासार्यैरुक्तम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -458,10 +489,11 @@ title = "०४"
 
 स उ ह तूष्णीमेव शिश्ये ॥ **३२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अनुत्थित एव यथापूर्वमशयिष्टेत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -472,10 +504,11 @@ title = "०४"
 
 तत उ हैनं यष्ट्या चिक्षेप ॥ **३३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 सुप्तं यष्ट्या ताडितवानित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -486,12 +519,13 @@ title = "०४"
 
 स तत एव समुत्तस्थौ ॥ **३४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 दण्डताडनादेव समुत्तस्थौ । न तु प्राणनामामन्त्रणादिना इत्यर्थः । प्राणनामभिरामन्त्रणेऽप्यनुत्थानप्रदर्शनंप्राणान्यत्वज्ञापनार्थम् । सुषुप्तिदशायामुपरतव्यापारेभ्यः शरीरेन्द्रियेभ्योऽन्यत्वं सुज्ञानमपि ; तस्यामपिदशायामनुपरतव्यापारात् प्राणादन्यत्वं ज्ञापनीयमिति । प्राणनामभिरामन्त्रणेऽप्यनुत्थानेन दण्डताडनोत्थानेन चजीवस्य प्राणव्यतिरेको दर्शितः ॥
 
 \[स्वप्नस्थानविषयकप्रश्नः\]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -502,10 +536,11 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, क्वैष एतद्बालाके पुरुषोऽशयिष्ट ? क्वैतदभूत् ? कुतएतदागादिति ॥ **३५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवं देहेन्द्रियमनःप्राणव्यतिरिक्तं जीवं प्रदर्श्य ततोऽतिरिक्तं परमात्मानं बोधयितुमाह तं होवाच...।हे बालाके ! एष पुरुषः अशयिष्ट इत्येतत् क्व इति स्वप्नस्थानप्रश्नः । यद्वा, एतच्छब्दः स्वप्नपरः ।अशयिष्टेत्येतत् प्रत्ययार्थमात्रपरम् । क्व एतत् स्वप्नमकृतेत्यर्थः । सर्वथा स्वप्नस्थानप्रश्नः । क्व वाएतदभूदिति सुषुप्तिस्थानप्रश्नः । एतच्छब्दस्य नपुंसकलिङ्गत्वेऽपि प्रकृतवाचिप्रकृतिस्वारस्यात्प्रकृतपुरुषशब्दितजीवपरः । ततश्च क्व सुप्तोऽभूद् इत्यर्थः । कुत एतदागादिति । अत्राप्येतच्छब्दोजीवपर एव । प्रबोधकालीनजीवोद्गमनापादानं किमित्यर्थः। ततश्च जीवस्य स्वप्नस्थानसुषुप्तिस्थानोद्गमनापादानानिपृष्टानि भवन्ति । यद्वा - त्रिष्वपि प्रश्नेषु एतच्छब्दः सप्तम्यन्तः । एतस्मिन् काल इत्यर्थः । सुपां सुलुक्(पा.सू. ७-१-३९) इति सुपः लुक् । एतस्मिन् काले क्व स्वप्नमनुभूतम् ; एतस्मिन् काले क्व सुप्तः ;एतस्मिन् काले कुतो निर्गत इति । एवञ्च त्रयाणामपि एतच्छब्दानामैकरूप्यञ्च सिध्यति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -516,10 +551,11 @@ title = "०४"
 
 तदु ह बालाकिर्न विजज्ञौ ॥ **३६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उत्तरं बालाकिर्न ज्ञातवानित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -530,12 +566,13 @@ title = "०४"
 
 तं होवाचाजातशत्रुः, यत्रैष एतद्बालाके पुरुषोऽशयिष्ट, यत्रैतदभूत् , कुतएतदागात् ॥ **३७**॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तं होवाचाजातशत्रुः इत्यादि । उच्यत इति शेषः ॥
 
 \[स्वप्नविषयकप्रश्नस्य उत्तरम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -546,12 +583,13 @@ title = "०४"
 
 हिता नाम हृदयस्य नाड्यो हृदयात् पुरीततमभिप्रतिष्टन्ति । यथा (च) सहस्रधाकेशस्यापि पात: तावदण्व्यः पिङ्गळस्याणिम्ना तिष्ठन्ते शुक्लस्य कृष्णस्य पीतस्यलोहितस्येति । तासु तदा भवति ॥ **३८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 स्वप्नस्थानप्रश्नं प्रतिवक्ति हिता ना तदा भवति - आत्मनो हितावहत्वात् हिता इति प्रसिद्धाःहृदयसंबन्धिन्यो नाड्यः हृदयात् पुरीततं पुरीतदाख्यं हृदयान्तर्वर्तिमांसपिण्डविशेषमाभप्रस्थिता भवन्ति ।हृदये पुरीतति नद्धा भवन्ति । ततश्च यथा केशस्यापि सहस्रधा पातः अतिसूक्ष्मः, तावदण्व्यः तथाअण्व्यः - सूक्ष्माः पिङ्गळस्य शुकस्य कृष्णस्य पीतस्य लोहितस्य अन्नपीतादिरसस्य अणिम्ना - लेशेनपूर्णाः तिष्ठन्ति । अतिसूक्ष्मत्वात् लेशेनापि पूर्णाः भवन्ति । तासु नाडीषु तदा स्वप्नकाले आश्रितोभवतीत्यर्थः ॥
 
 \[सुषुप्तिविषयकप्रश्नस्य उत्तरम्\]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -562,12 +600,13 @@ title = "०४"
 
 यदा सुप्तः स्वप्नं न कथञ्चन पश्यति, अथास्मिन् प्राण एवैकधा भवति ।तदैनं वाक् सर्वैः नामभिः सहाप्येति ; चक्षुः सर्वैः रूपैः सहाप्येति ; श्रोत्रं सर्वैःशब्दैः सहाप्येति ; मनःसर्वेः ध्यानैः सहाप्येतीति ॥ **३९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 सुषुप्तिस्थानप्रश्नस्योत्तरमाह यदा सुप्तः...... सहाप्येतीति । सुप्त: - वर्तमाने क्त: - स्वपन्सन् यदा उपरतस्वप्नप्रदर्शनो भवति । यदा शब्दानुरोधात् तदा शब्दोऽध्याहर्तव्यः - अथ स्वप्नानन्तरंअस्मिन् प्राणे प्राणशरीरके परमात्मनि एकधा भवति । एकधाभावो नाम जाग्रदाद्यवस्था-जनितदेहात्माभिमानकृतरागद्वेषादिलक्षणकालुष्यादिराहित्येनावस्थानम् । सर्वाणि हवा इमानि भूतानि प्राणमेवाभिसंविशन्ति(छा.उ. १-११-५) इत्यादौ प्राणशब्दस्य परमात्मनि प्रचुरप्रयोगात् , वाजसनेयके समानप्रकरणे, यएषोऽन्तर्हृदय आकाशस्तस्मिन् शेते (बृ.उ.६-४-२२) इति आकाशशब्दितस्य सुषुप्त्याधारत्वश्रवणाञ्चआकाशप्राणशब्दयोः परमात्मपरत्वमन्तरेणाविरोधासंभवात् , सता सोम्य तदा संपन्नो भवति, (छा.उ. ६-८-१),सति संपद्य न विदुः, (छां.उ. ६-९-२) प्राज्ञेनात्मना संपरिष्वक्तः (बृ.उ. ६-३-२१) इति परमात्मनःसुषुप्त्याधारत्वस्य श्रुत्यन्तरश्रवणाञ्च प्राणशब्दो योगेन वा अपर्यवसान वृत्त्या वा ब्रह्मपरः । परमात्मनोबुद्धिस्थत्वात् अस्मिन् इति निर्देशोऽप्युपपद्यते । अथ - तदुत्तरक्षण एव परमात्मानम् अपियन्तं जीवंवागादीन्द्रियाण्यपि (तत् ) स्वकार्येण सहापियन्तीत्यर्थः । नामशब्दो नामाभिलपनपरः । रूपशब्दशब्दौतज्ज्ञानौपयिकव्यापारपरौ । रूपशब्दादीनां सुषुप्तौ लयासंभवात् । इन्द्रियव्यापारोपरतेरेव सुषुप्तिशब्दार्थत्वात् ॥
 
 \[ब्रह्मबोधनम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -578,10 +617,11 @@ title = "०४"
 
 स यदा प्रतिबुध्यते, यथा अग्नेर्विस्फुलिङ्गाः विप्रतिष्ठेरन् , एवमेवैतस्मादात्मनःप्राणाः यथायतनं विप्रतिष्ठन्ते । प्राणेभ्यो देवाः । देवेभ्यो लोकाः ॥ **४०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उद्गमनापादानप्रश्रस्योत्तरमाह - जीवप्रबोधदशायां अग्नेर्विस्फुलिङ्गा इव एतस्मात् परमात्मनःप्राणशब्दिताः जीवाः यथास्थानं प्रस्थिता भवन्ति । तेभ्यश्च देवशब्दितानि इन्द्रियाणि, एतेभ्यश्च लोकशब्दितानिज्ञानानि भवन्तीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -592,10 +632,11 @@ title = "०४"
 
 तद्यथा क्षुरः क्षुरधाने अवहितः स्यात् , विश्वम्भरो वा विश्वम्भरकुलाये, एवमेवैषप्राज्ञ आत्मा इदं शरीरमात्मानमनुप्रविष्टः आ लोमभ्यः आ नखेभ्यः ॥ **४१** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 क्षुरो धीयतेऽस्मिन्निति क्षुरधानंक्षुरकोशः। तस्मिन् यथा क्षुरः अवहितः पिहितप्रविष्टः, - विश्वंबिभर्ति वैश्वानराग्न्यादि रूपेण इति विश्वंभरोऽग्निः - तस्य कुलाये नीडे - एवमेवैष परमात्मा इदंपुरोवर्तिशरीरम् आलोमभ्यः आनखेभ्यः । व्याप्त इत्यध्याहारः । व्याप्त्या आत्मानं जीवात्मानमनुप्रविष्टःअन्तर्यामितयाऽनुप्रविष्ट इत्यर्थः । तादृशस्य सुषुप्त्याधारत्वोद्गमनापादानत्वे संभवत इति भावः । यद्वा इदंवाक्यं जीवशरीरपरमेव व्याख्येयम् । आत्मानमिदं शरीरम् - आत्मत्वेनाभिमन्यमानमिदं शरीरम्आलोमभ्यः आनखेभ्यः जीवरूपेण प्रविष्ट इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -606,10 +647,11 @@ title = "०४"
 
 तमेतमात्मानमेते आत्मानोऽन्ववस्यन्ति ॥ **४२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एतादृशं परमात्मानम् इतरे जीवाः अन्ववस्यन्ति - अनुवर्तन्ते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -620,10 +662,11 @@ title = "०४"
 
 यथा श्रेष्ठिनं स्वाः ॥ **४३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तत्र दृष्टान्तमाह यथा श्रेष्ठिनं स्वाः । यथा त्रैष्ठ्यवन्तं स्वाः ज्ञातयः अनुवर्तन्ते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -634,12 +677,13 @@ title = "०४"
 
 तद् यथा श्रेष्ठी स्वैर्भुङस्ते, यथा श्रेष्ठिनं स्वा: भुञ्जते एवमेवैष प्राज्ञ आत्माएतैरात्मभिर्भुङ्क्ते । यथा श्रेष्ठी स्वैः, एवं वा एतमात्मानोऽन्ववस्यन्ति ॥ **४४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तद् यथा श्रेष्ठी....इति । यथा कश्चित् प्रभुः भोगोपकरणभूतैः स्वैः ज्ञातिभिः भोगान् भुङ्क्ते यथास्वाश्च बन्धवः तं प्रभुमैश्वर्यादिसमग्रमनुभूय तद्दत्तानि वित्तादीनि चोपजीव्य हृष्यन्ति - एवमेवायं परमात्मास्वोपकरणभूतैः, जीवात्मभिः लीलारसं भुङ्क्ते। ते चाऽऽत्मानः परमात्मदत्तभोगोपकरणाः सर्वैश्वर्यादिगुणविशिष्टंतमनुभूय हृष्टा भवन्तीत्यर्थः । यथा वा स्वा: श्रेष्ठिनं भुञ्जन्ति इति पाठे, यथा प्रधानपुरुषः स्वकीयैःभृत्यादिभिः भोगसाधनानि उपहरद्भिः हेतुभिः भोगान् भुङ्क्ते, यथा च भोगसाधनानि उपहरन्तः प्रधानपुरुषंपालयन्ति - एवमित्यर्थः । भुज पालने (धा.पा. १४५५) इति भुजेः परस्मैपदित्वादिति ध्येयम् । ईदृशंभोक्तृत्वं जीवद्वारा वा परमात्मनि योजनीयम् ॥
 
 \[बालाकीविद्याफलम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
