--- a/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/02.md
+++ b/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/02.md
@@ -30,6 +30,8 @@ title = "०२"
 भवति । अन्नादास्त्वेवैनमुपमन्त्रयन्ते, ददाम त इति ॥ **१** ॥
 </details>
 
+<details><summary>रङ्गरामानुजः</summary>
+
 \[प्राणस्य श्रेष्ठता\]  
 प्राणो ब्रह्मेति ह स्माह पैङ्ग्यः । तस्य ह वा एतस्य प्राणस्य ब्रह्मणो वाक्  
 परस्तात् चक्षुरारुन्धे ; चक्षुः परस्ताच्छ्रोत्रमारुन्धे ;, श्रोत्रं परस्तान्मन आरुन्धे ; मन:  
@@ -37,7 +39,7 @@ title = "०२"
 वलिं हरन्ति । एवं हैवास्मै सर्वाणि भूतान्ययाचमानायैव बलिं हरन्ति, य एवं वेद ।  
 तस्योपनिषत्, न याचेदिति । तद् यथा ग्रामं भिक्षित्वाऽलब्ध्वा उपविशेत् , नाहमतो  
 दत्तमश्नीयामिति, त एवैनमुपमन्त्रयन्ते, ये पुरस्तात् प्रत्याचक्षीरन् । एष धर्मोऽयाचतो  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -48,6 +50,8 @@ title = "०२"
 
 भवति, अन्नादास्त्वेवैनमुपमन्त्रयन्ते, ददाम त इति ॥ **२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[प्राणादिदेवतोद्देश्यक होमाद्यनुष्ठानफलम्\]  
 अथात एकधनावरोधनम् , यदेकधनमभिध्यायात् , पौर्णमास्यां वाऽमावास्यायां  
@@ -57,7 +61,7 @@ title = "०२"
 मेऽमुष्मादिदमवस्वरूप्यात् तस्यै स्वाहा”, “श्रोत्रं नाम देवताऽवरोधनी सा मेऽमुष्मादिदमवरुन्ध्यात् तस्यै स्वाहा”,  
 “मनो नाम देवताऽवरोधनी सा मेऽमुष्यादिदमवरुन्ध्यात् तस्यै स्वाहा”, “प्रज्ञा नाम  
 देवताऽवरोधनी सा मेऽमुष्पादिदमवरुन्ध्यात् तस्यै स्वाहा”, इति । अथ धूमगान्धं प्रजिघ्राय  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -68,6 +72,8 @@ title = "०२"
 
 आज्यलेपेनाङ्गान्यनुविमृज्य वाचंयमोऽभिप्रव्रज्यार्थं ब्रूयात्, दूतं वा प्रहिणुयात् , लभते हैव ॥ **३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[प्राणादिदेवतोद्देश्यक होमबलेन परेषां स्वस्मिन् प्रीतिपूर्वकस्मरणसिद्धिः\]  
 अथातो दैवः स्मरः यस्य प्रियो बुभूषेत्, यस्यै वा, येषां वा, यासां वा,  
@@ -75,7 +81,7 @@ title = "०२"
 स्वाहा', 'चक्षुस्ते मयि जुहोम्यसौ स्वाहा', 'श्रोत्रं ते मयि जुहोम्यसौ स्वाहा',  
 'मनस्ते मयि जुहोम्यसौ स्वाहा', 'प्रज्ञां ते मयि जुहोम्यसौ स्वाहा', इति । अथ  
 धूमगधं प्रजिघ्रायाज्यलेपेनाङ्गान्यनुविमृज्य वाचंयमोऽभिप्रव्रज्य संस्पर्शं जिगमिषेत्,  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -86,13 +92,15 @@ title = "०२"
 
 अपि वाताद्वा तिष्ठेत् संभाषमाणः; प्रियो हैव भवति, स्मरन्ति हैवास्य ॥ **४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[अग्निहोत्रसंपत्तिः\]  
 अथात: संयमनं प्रातर्दनमान्तरमग्निहोत्रमित्याचक्षते - यावद्वै पुरुषो भाषते, न  
 तावत् प्राणितुं शक्नोति । प्राणं तदा वाचि जुहोति । यावद्वै पुरुषः प्राणिति, न  
 तावद्भाषितुं शक्नोति, वाचं तदा प्राणे जुहोति । एते अनन्ते अमृते आहूती जाग्रञ्च स्वपंच  
 संततं जुहोति । अथ या अन्या आहुतयोऽन्तवत्यः, ता: कर्ममय्यो हि भवन्ति । तद्ध  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -103,6 +111,8 @@ title = "०२"
 
 स्मैतत् पूर्वे विद्वांसोऽग्निहोत्रं न जुहवाञ्चक्रुः ॥ **५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उक्थं ब्रह्मेति ह स्माह शुष्कभृङ्गारः । तत् ऋगित्युपासीत । सर्वाणि हास्मै  
 भूतानि श्रेष्ठ्यायाभ्यर्च्यन्ते । तत् यजुरित्युपासीत । सर्वाणि हास्मै भूतानि श्रैष्ठ्याय  
@@ -111,7 +121,7 @@ title = "०२"
 यशस्वितमं तेजस्वितममिति शस्त्रेषु भवति, एवं हैव स सर्वेषु भूतेषु श्रीमत्तमो  
 यशस्वितमस्तेजस्वितमो भवति, य एवं वेद । तदेतदैष्टिकं कर्ममयमात्मानमध्वर्युः  
 संस्करोति ; तस्मिन् यजुर्मयं प्रवयति ; यजुर्मये ऋङ्मयं होता ; ऋङ्मये साममयमुद्गाता ।  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -122,6 +132,8 @@ title = "०२"
 
 स एष त्रय्यै विद्याया आत्मा ; एष उ एवैतदिन्द्रस्यात्मा भवति य एवं वेद ॥ **६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[आदित्योपासनम्\]  
 अथातः सर्वजित: कौषीतकेस्त्रीण्युपासनानि भवन्ति । सर्वजिद्ध स्म  
@@ -129,7 +141,7 @@ title = "०२"
 'वर्गोऽसि पाप्मानं मे वृङ्घि' इति । एतयैवाऽऽवृता मध्ये सन्तम्, 'उद्वर्गोऽसि  
 पाप्मानं मे उद्वृङ्घि' इति । एतयैवाऽऽवृताऽस्तं यन्तम्, 'संवर्गोऽसि पाप्मानं मे  
 संवृङ्घि' इति । तद् यदहोरात्राभ्यां पापमकरोत्, सं तद् वृङ्घे । तथो एवैवं विद्वान्  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -140,6 +152,8 @@ title = "०२"
 
 एतयैवाऽऽवृताऽऽदित्यमुपतिष्ठते, यदहोरात्राभ्यां पापं करोति, सं तद् वृङ्घे ॥ **७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[सोमोपासनम्\]  
 अथ मासिमास्यमावास्यायां वृत्तायां पश्चाचन्द्रमसं दृश्यमानमुपतिष्ठेतैतयैवाऽऽवृता  
@@ -149,7 +163,7 @@ title = "०२"
 अंशुमाप्याययन्ति' इत्येतास्तिस्र ऋचो जपित्वा, 'माऽस्माकं प्राणेन प्रजया  
 पशुभिराप्याययिष्ठाः, योऽस्मान् द्वेष्टि, यञ्च वयं द्विष्मः, तस्य प्राणेन प्रजया  
 पशुभिराप्याययस्व' इति । 'ऐन्द्रीमावृतमावर्ते आदित्यस्यावृतमावर्ते' इति दक्षिणं  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -160,6 +174,8 @@ title = "०२"
 
 बाहुमन्वावर्तते ॥ **८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथ पौर्णमास्यां पुरस्ताञ्चन्द्रमसं दृश्यमानमुपतिष्ठेतैतयैवाऽऽवृता, ‘सोमो  
 राजाऽसि विचक्षणः पञ्चमुखोऽसि । प्रजापतिर्बाह्मणस्त एकं मुखम् ; तेन मुखेन  
@@ -169,7 +185,7 @@ title = "०२"
 मामन्नादं कुरु । त्वयि पञ्चमं मुखम् ; तेन मुखेन सर्वाणि भूतान्यत्सि ; तेन मुखेन  
 मामन्नादं कुरु । माऽस्माकं प्राणेन प्रजया पशुभिरपक्षेष्ठाः । योऽस्मान् द्वेष्टि , यञ्च वयं  
 द्विष्मः, तस्य प्राणेन प्रजया पशुभिरपक्षीयस्व' इति । दैवीमावृतमावर्त  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -180,9 +196,11 @@ title = "०२"
 
 आदित्यस्यावृतमन्वावर्त इति दक्षिणं बाहुमन्वावर्तते ॥ **९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथ संवेश्यन् जायायै हृदयमभिमृशेत्, 'यत् ते सुसीमे हृदये श्रितमन्तः प्रजापतौ ।  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -193,6 +211,8 @@ title = "०२"
 
 तेनामृतत्वस्येशाने मा त्वं पुत्र्यमघं निगाः' इति । न ह्यस्मात् पूर्वा प्रजा प्रैतीति ॥ **१०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथ प्रोष्याऽऽयन् पुत्रस्य मूर्धानमभिजिघ्रेत्, 'अङ्गादङ्गात् संभवसि हृदयादधिजायसे।  
 आत्मा वै पुत्रनामासि स जीव शरदः शतम्' इति ; नामास्य दधाति । 'अश्मा भर  
@@ -201,7 +221,7 @@ title = "०२"
 तेन त्वा परिगृह्णाम्यसौ' इति । अथास्य दक्षिणे कर्णे जपति, 'अस्मै प्रयन्धि मघवन्नृजीषिन्'  
 इति । ‘इन्द्र श्रेष्ठानि द्रविणानि धेहि' इति सव्ये। ‘मा छेत्था मा व्यथिष्ठाः शतं शरद  
 आयुषो जीवस्व पुत्र ते नाम्ना मूर्धानमभिजिघ्रामि' इति त्रिरस्य मूर्धानमभिजिघ्रेत् ।  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -212,6 +232,8 @@ title = "०२"
 
 ‘गवां त्वा हिङ्कारेणाभिहिङ्करोमि' इति त्रिरस्य मूर्धानमभिहिङ्कुर्यात् ॥ **११** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथातो दैवः परिमरः - एतद्वै ब्रह्म दीप्यते यदग्निर्व्वलति ; अथैतन्म्रियते,  
 यन्न ज्वलति । तस्यादित्यमेव तेजो गच्छति ; वायुं प्राणः । एतद्वै ब्रह्म दीप्यते,  
@@ -220,7 +242,7 @@ title = "०२"
 विद्युतमेव तेजो गच्छति ; वायुं प्राणः । एतद्वै ब्रह्म दीप्यते, यद् विद्युद् विद्योतते  
 अथैतन्म्रियते, यन्न विद्योतते । तस्या दिश एव (वायुमेव) तेजो गच्छति ; वायुं प्राणः ।  
 ता वा एताः सर्वा देवता वायुमेव प्रविश्य वायौ मृत्वा न मूर्च्छन्ते ; तस्मादेव  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -231,6 +253,9 @@ title = "०२"
 
 पुनरुदीरत इत्यधिदैवतम् । अथाध्यात्मम् ॥ **१२** ॥  
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
+
 .  
 एतद्वै ब्रह्म दीप्यते, यद्वाचा वदति । अथैतन्म्रियते, यन्न वदति । तस्य चक्षुरेव  
 तेजो गच्छति ; प्राणं प्राणः । एतद्वै ब्रह्म दीप्यते, यच्चक्षुषा पश्यति । अथैतन्म्रियते, यन्न  
@@ -240,7 +265,7 @@ title = "०२"
 तेजो गच्छति ; प्राणं प्राणः । ता वा एताः सर्वा देवताः प्राणमेव प्रविश्य प्राणे मृत्वा  
 न मूर्च्छन्ते ; तस्मादेव पुनरुदीरते । तद् यदिह वा एवं विद्वांसमुभौ पर्वतौ अभिप्रवर्तेयातां  
 दक्षिणश्चोत्तरश्च तुस्तूर्षमाणौ, न हनं स्तन्वीयाताम् । अथ य एनं द्विषन्ति, यांश्च स्वयं द्वेष्टि  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -251,6 +276,8 @@ title = "०२"
 
 त एवैनं परिम्रियन्ते ॥ **१३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 \[प्राणस्य प्राशस्त्यकथनम्\]  
 अथातो नि:श्रेयसादानम् एता ह वै देवता अहंश्रेयसे विवदमाना  
@@ -261,7 +288,7 @@ title = "०२"
 एव । अथैनत् प्राणः प्रविवेश । तत् तत एव समुत्तस्थौ । ता वा एताः सर्वा देवताः  
 प्राणे निःश्रेयसं विदित्वा प्राणमेव प्रज्ञात्मानमभिसंभूय सहैवैतैः सर्वैरस्माच्छरीरादुत्क्रामति ।  
 स वायुप्रतिष्ठ (विष्ट) आकाशात्मा स्वरेति । स तूद्गच्छति, यत्रैते देवाः, तत् प्राप्य यदमृता  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
