--- a/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
+++ b/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
@@ -24,9 +24,10 @@ title = "०३"
 प्रतर्दनो ह वै दैवोदासिरिन्द्रस्य प्रियं धामोपजगाम युद्धेन च पौरुषेण च ॥ **१**॥  
 </details>
 
+<details><summary>रङ्गरामानुजः</summary>
+
 दिवोदासस्यापत्यं दैवोदासिः । नाम्ना प्रतर्दनः युद्धसाधनबलेन शौर्येण च युक्तः इन्द्रस्य प्रियं स्वर्गं उपगतः इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,10 +38,13 @@ title = "०३"
 
 तं हेन्द्र उवाच, प्रतर्दन । वरं ददानीति ॥ **२** ॥  
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
+
 तं - ददानीति । स्पष्टोऽर्थः ॥
 
 स होवाच प्रतर्दनः, त्वमेव मे वरं वृणीष्व, यं त्वं मनुष्याय हिततमं मन्यसे  
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -51,10 +55,11 @@ title = "०३"
 
 इति ॥ **३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 सर्वज्ञः सः......मन्यसे । त्वं यं वरं मनुष्याय मे हिततमं मन्यसे, त्वमेव वृणीष्व ; नाहमज्ञःस्वहिततमं वरं वेद्मीति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -65,10 +70,11 @@ title = "०३"
 
 तं हेन्द्र उवाच, न वै वरं परस्मै वृणीते त्वमेव वृणीष्वेति ॥ **४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 न ह्यन्योऽन्यार्थं वरं वृणीते । अतः त्वदभिलषितं वरं त्वमेव मत्तः तं...... वृणीष्वेति ।वृणीष्वेत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -79,10 +85,11 @@ title = "०३"
 
 'अवरो वै तर्हि किल मे' इति होवाच प्रतर्दनः ॥ **५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 यदि हि त्वयाऽपि न व्रियते, तर्हि मम हिततमस्य वरस्यापरिज्ञानात् वराभाव एव प्राप्त इतिप्रतर्दन इन्द्रमुवाच इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -93,10 +100,11 @@ title = "०३"
 
 अथो खल्विन्द्रः सत्यादेव नेयाय ॥ **६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवमुक्त इन्द्रः, ते वरं ददामीति सत्याद्वाक्यात् नापेतः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -107,12 +115,13 @@ title = "०३"
 
 सत्यं हीन्द्रः ॥ **७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तत्र हेतुमाह - इन्द्रस्य सत्यप्रधानत्वादित्यर्थः । ततश्च वरं ददानीति मदुक्तं वाक्यमसत्यं माभूदिति अमन्यत इत्यर्थः।
 
 केचित्तु - सत्या देवतेयाय सत्यं हीन्द्र इति पाठे, तं हेन्द्र उवाचेति शेषः । वचनप्रकारमेवाह - सत्यादेवतेयाय सत्यं हीन्द्र इति । सत्या देवता - सत्यवाक्या परमात्मरूपा देवता त्वाम् इयाय -त्वामाविष्टवती । सत्यवाक्यपरमात्मावेशवशाद्धि, त्वमेव वरं वृणीष्व इति वाक्यं संप्रयुक्तवान् इति भावः ।परमात्मनः सत्यवाक्यत्वप्रसिद्धिं दर्शयति सत्यं हीन्द्र इति । इन्द्रः - परमात्मेत्यर्थः - इति वदन्ति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -123,12 +132,13 @@ title = "०३"
 
 स होवाच मामेव विजानीहि । एतदेवाहं मनुष्याय हिततमं मन्ये, यन्मांविजानीयात् ॥ **८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 यदि ते हिततममुपदेष्टव्यम् , तर्हि मदुपासनमेव हिततमं - मोक्षसाधनमिति मन्मतम् । अतइतरत् परित्यज्य मामुपास्वेत्यर्थः । अतः प्रसिद्धजीवभावस्येन्द्रस्य हिततमत्वलक्षणमोक्ष-साधनत्वाश्रयोपासनकर्मत्वासंभवात् मामिति शब्दः स्वात्मभूतं परमात्मानमभिदधाति । य आत्मनि तिष्ठन् ,अन्तः प्रविष्ट: शास्ता जनानां सर्वात्मा (बृ.उ.मा.पा. ३,५-७-२२,२०) इति शास्त्रेण, स्वस्याप्यात्मभूत:।परमात्मा , अहम्बुद्धिशब्दाश्च परमात्मपर्यन्ता: इति जानत इन्द्रस्य स्वात्मभूते परमात्मनि मामितिशब्दप्रयोगे नानुपपत्तिः।
 
 ननु स्वायते शब्दप्रयोगे असन्दिग्धं परमात्मवाचकमेव पदं प्रयुज्यताम् । कि न्यायलभ्यपरमात्मपर्यवसानेनमामिति शब्देनेति चेत् । स्यादेवम्, यदि परमात्मस्वरूपमात्रोपासन विधित्सितं स्यात् । अपितुस्वशरीरकतया । अतो मामिति निर्देशः उपपद्यते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -139,10 +149,11 @@ title = "०३"
 
 त्रिशीर्षाणं त्वाष्ट्रमहनम् ॥ **९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तत्क्रतुन्यायेन स्वोपासकस्य पापाश्लेषं वक्तुं स्वस्य पापाश्लेषं दर्शयति । त्रिशिरस्कं त्वष्ट्पुत्रंविश्वरूपं हतवानस्मि॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -153,10 +164,11 @@ title = "०३"
 
 अरुन्मुखान् यतीन् सालावकेभ्यः प्रायच्छम् ॥ **१०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 रौतीति रुत् वेदः । रुत् मुखे न विद्यते येषां ते अरुन्मुखाः । वेदान्तविमुखान् यतीन्वनश्चविशेषेभ्यः खादनाय प्रायच्छम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -167,10 +179,11 @@ title = "०३"
 
 वह्नीः सन्धा अतिक्रम्य दिवि प्राह्वादीनतृणहम् , अन्तरिक्षे पौलोमान् ।पृथिव्या कालकञ्जान् ॥ **११** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 न हनिष्यामीति कृता वह्नीः प्रतिज्ञा अतिक्रम्य दिवि वर्तमानान् प्रह्लादपुत्रान् अतृणहम् । तृणहिंसायाम् (धा.पा. १४४७) इति हि धातुः । अन्तरिक्ष पौलोमान् - पुलोमसुतान् , पृथिव्यांकालकजाख्यासुरांश्च हिसितवानस्मि ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -181,14 +194,15 @@ title = "०३"
 
 तस्य मे तत्र न लोम चामीयत ॥ **१२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवं हिंसितवतो मे लोमापि नाहिंस्यत ; बहाविद्याप्रभावादित्यर्थः ॥
 
 \[इन्द्रेण स्वान्तर्याम्युपदेशः।
 
 स यो मां विजानीयात् , नास्य केन च कर्मणा लोको मीयते ; न मातृवधेन,
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -199,12 +213,13 @@ title = "०३"
 
 न पितवधेन, न स्तेयेन, न भ्रूणहत्यया ; नास्य पापं चकृषो मुखं नीलं वेति ॥ **१३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 य एतादृशमात्मानं परमात्मानमुपास्ते, तस्य केनापि कर्मणा मातृवधपितृवधस्तेयभ्रूणहत्यादिलक्षणेनपरलोकप्तिर्न विरुद्ध्यते । एवं पापं कृतवतोऽपि, मया ईदृशं पापं कृतम् इति निर्वेदीनतमुखवैवर्ण्यमपिनास्तीत्यर्थः । चकृष: इति तु क्वसन्तात् षष्ठी ॥
 
 \[अचेतनविशेषरूपप्राणविशिष्टोपासनम् ।
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -215,12 +230,13 @@ title = "०३"
 
 स होवाच, प्राणोऽस्मि प्रज्ञात्मा ; तं मामायुरमृतपित्युपास्स्व ॥ **१४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवं वेतनविशेषरूपवविशिष्टपरमात्मोपासनमुक्त्वा अचेतनविशेषरूपप्राणविशिष्टोपासमाह सहोवाच... उपास्स्व इति । प्रज्ञारूप आत्मा - प्रज्ञात्मा जीवः । जीवशारीरक इत्यर्थः ।जीवशरीरकोऽहम् । प्राणोऽस्मि - प्राणशरीरकोऽहमस्मि । तादृशं प्राणशरीरक माम् आयुरमृतमित्युमास्स्व।
 
 आयुः प्राणः । प्राणो वा आयुः ; प्राण वा अमृतम् । यावद्धि अस्मिन्
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -231,10 +247,11 @@ title = "०३"
 
 शरीरे प्राणो वसति, तावदायुः । प्राणेन ह्येवामुष्मिन् लोकेऽमृतत्वमाप्नोति ॥ **१५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 कथं प्राणशरीरकस्यायुष्ट्वामृतत्वे इत्याशङ्क्याह - आयु: -आप्नोति । शरीरे प्राणस्थितेरुच्छ्वासादि-लक्षणायुस्साधनत्वादायुः प्राणः । लोकान्तरे चिरस्थायित्वरूपामृतत्वप्राप्तेः प्राणाधीनोपायानुष्ठानसाध्यत्वात्प्राणस्यामृतत्वम् । अत आयुष्ट्वामृतत्वे प्राणस्योपपद्येते । तद् द्वारा परमात्मनश्चोपपत्ते: आयुष्ट्वामृतत्वाभ्यां प्राणशरीरकब्रह्मणउपासनमुपपद्यते । यद्वा व्यासार्योक्तरीत्या तं मामायुरिति वाक्ये मामिति जीविशिष्टता उच्यते आयुरितिप्राणविशिष्टता । आयुः प्राण इति ह्यनन्तरमेव श्रवणात् आयुरमृतमिति स्वेन रूपेणावस्थितिः । अतः(एवञ्च) अस्मित्रेव वाक्ये स्वेन रूपेण, चिदचिद्विशिष्टतया च त्रिविधोपासनं विधीयते । अतोनोपासनात्रयविधिकृतवाक्यभेद इति द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -245,12 +262,13 @@ title = "०३"
 
 प्रज्ञया सत्यं संकल्पमेति ॥ **१६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्रज्ञात्मत्वविशिष्टोपासनस्य फलमाह । अपहतपाप्मत्वादिगुणाष्टकविशिष्टलक्षणं ब्रहरूपमित्यर्थ:॥
 
 \[प्रतर्दनविद्योपासनस्य फलम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -261,10 +279,11 @@ title = "०३"
 
 स यो मामायुरमृतमित्युपास्ते सर्वमायुरस्मिन् लोक एति ।आप्नोत्यमृतत्वमक्षितिंस्वर्गे लोके ॥ **१७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 आयुरमृतत्वगुणविशिष्टप्राणोपासनस्य फलमाह । अक्षितिं - चिरकालावस्थायित्वम् । ततश्चमधुविद्यायाः वस्वादिपदप्राप्तिपूर्वकब्रह्मप्राप्तिवत् अस्या अपि विद्यायाश्चिरायुष्ट्वपूर्वकचिरकाल-स्वर्गप्राप्तिपूर्वकब्रह्मप्राप्तिः फलमित्युक्तं भवति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -275,10 +294,11 @@ title = "०३"
 
 तद्धैक आहुः एकभूयं वै प्राणा गच्छन्तीति ॥ **१८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उपास्यमानस्य प्राणस्य प्राणान्तरापेक्षया श्रेष्ठ्यं वक्तुं पूर्वपक्षमाह । तद्धैके...... गच्छन्तीति।मुख्यप्राणश्चेतराणि चेन्द्रियाणि एकैकस्मिन् कार्ये कर्तव्ये परस्परसाह्यलक्षणमेकभावं यान्ति । अतो मुख्यप्राणस्यप्राणान्तरसाम्यमेवेति केचिदाहुरित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -289,10 +309,11 @@ title = "०३"
 
 न हि कश्चन शक्नुयात् सकृद्वाचा नाम प्रज्ञापयितुम् , चक्षुषा रूपम् , श्रोत्रेणशब्दम् , मनसा ध्यातुमिति ॥ **१९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तत्रोपपत्तिरुच्यते । न हि ध्यातुमिति । न हीन्द्रियजातं युगपदेव स्वकार्यं जनयितुमीष्टइत्यर्थः॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -303,12 +324,13 @@ title = "०३"
 
 एक भूयं वै प्राणा एकैकं सर्वाण्येतानि प्रज्ञापयन्ति ॥ **२०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 फलितमाह । एकभूयं..प्रज्ञापयन्ति। तस्मात् सर्वे प्राणा एकत्वं प्राप्य एकैकं सर्वाण्येतानि नामरूपशब्दादीनि प्रज्ञापयन्ति ॥
 
 \[प्राणजीवयोः एककार्यकरत्वम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -331,10 +353,11 @@ title = "०३"
 
 चक्षुः पश्यत् सर्वे प्राणा अनुपश्यन्ति । श्रोत्रं शृण्वत् सर्वे प्राणा अनुशृण्वन्ति ।मनो ध्यायत् सर्वे प्राणा अनुध्यायन्ति । प्राणं प्राणन्तं सर्वे प्राणा अनुप्राणन्तीति ।एवमुहैतदिति हेन्द्र उवाच ॥ **२२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तदेव प्रपञ्चयति - वाचं.......अनुवदन्ति । सहायतया तिष्ठन्ति इत्यर्थः । एवमुत्तरत्रापि ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -345,12 +368,13 @@ title = "०३"
 
 अस्ति त्वेव प्राणानां निश्श्रेयसम् ॥ **२३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथापि मुख्यप्राणस्य विशेषं दर्शयति - प्राणानां मध्ये मुख्यप्राणस्य श्रेष्ठ्यमस्तीत्यर्थः ॥
 
 \[मुख्यप्राणस्य वैशिष्ट्यम् \]
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -361,10 +385,11 @@ title = "०३"
 
 जीवति वागपेतः, मूकान् हि पश्यामः ॥ **२४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तदेव प्रपञ्चयति - जीवति वागिन्द्रियराहित्येऽपि शरीरधारणमस्ति ; मूकानां दर्शनात् ।एवमुत्तरत्रापि द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -375,10 +400,11 @@ title = "०३"
 
 जीवति चक्षुरपेतः ; अन्धान् हि पश्यामः । जीवति श्रोत्रापेतः ; बधिरान् हिपश्यामः । जीवति बाहुच्छिन्नः, जीवति उरश्छिन्नः इति ; एवं हि पश्यामः ॥ **२५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 छिन्नोरस्को जीवति, छिन्नबाहुर्जीवतीति एवं ह्यनुभूयते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -389,10 +415,11 @@ title = "०३"
 
 अथ खलु प्राण एव प्रज्ञात्मेदं शरीरं परिगृह्योत्थापयति ॥ **२६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथखलुशब्दः प्रसिद्धौ । मुख्यप्राण एव प्रज्ञात्मा । प्रज्ञाशब्दोऽत्र जीवपरः । स आत्मा सहायोयस्य स प्रज्ञात्मा । जीवसहायको मुख्यप्राण एव मृतप्रायं शयानं शरीरं परितो गृहीत्वा उत्थापयति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -403,10 +430,11 @@ title = "०३"
 
 तस्मादेतदेवोक्थमुपासीत ॥ **२७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तस्मादितरेन्द्रियाणि परित्यज्य मुख्यप्राणमेवोत्थापयितृत्वगुणविशिष्टमुपासीत ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -417,10 +445,11 @@ title = "०३"
 
 यो वै प्राणः सा प्रज्ञा । या वै प्रज्ञा, स प्राणः । सह ह्येतावस्मिन् शरीरे वसतः ;सहोत्क्रामतः ॥ **२८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अत्रापि प्रज्ञाशब्देन जीव उच्यते । जीवप्राणावस्मिन् शरीरे सह वसतः ; सहोत्क्रामतः । ततोहेतोः जीव एव प्राणः ; प्राण एव जीवः ; उभावप्येककार्यकरावित्यर्थः । अतः परमात्मनः प्राणशरीरकत्वेनजीवशरीरकत्वेन चानुसन्धान युक्तमिति भावः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -431,10 +460,11 @@ title = "०३"
 
 तस्यैषैव दृष्टिः एतद्विजानाति ॥ **२९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तस्य मुख्यप्राणस्य ज्ञातृरूप आत्मा दृष्टिः - दर्शनसाधनम् । जडस्य प्राणस्यज्ञातृरूपजीवसाहित्यादेव उत्थापनादिकार्यकरत्वादिति भावः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -445,10 +475,11 @@ title = "०३"
 
 यत्रैतत्पुरुषः सुप्तः स्वप्नं न 'कथञ्चन पश्यति, अथास्मिन् प्राण एवैकधाभवति ॥ **३०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 यत्र - यदा एतत्पुरुषः - एष पुरुषः सुप्तस्सन् न कञ्चन स्वप्नं पश्यति, अथ - तदेत्यर्थः ।अस्मिन् प्राणे - प्राणशरीरके परमात्मनि अयं सुप्तः पुरुषः एकधा भवति । एकधाभावप्रकारश्चोत्तराध्यायेवक्ष्यते ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -459,10 +490,11 @@ title = "०३"
 
 तदैनं वाक् सर्वैर्नामभिः सहाप्येति ॥ **३१** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 परमात्मनैकीभूते जीवे स्वकार्येण नामाभिलपनेन सह वागिन्द्रियं लीनं भवति इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -473,10 +505,11 @@ title = "०३"
 
 चक्षुः सर्वैः रूपैः सहाप्येति ॥ **३२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अत्र रूपशब्दो रूपज्ञानौपयिकव्यापारपरः । एवमुत्तरत्रापि द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -487,10 +520,11 @@ title = "०३"
 
 श्रोत्रं सर्वैः शब्दैः सहाप्येति । मनः सर्वैः ध्यानैः सहाप्येति ॥ **३३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 ध्यानैः - ध्यानौपयिकव्यापारैरित्यर्थः । शिष्टं स्पष्टम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -501,10 +535,11 @@ title = "०३"
 
 स यदा प्रतिबुध्यते - यथाऽग्ने: विस्फुलिङ्गा विप्रतिष्ठेरन् , एवमेवैतस्मादात्मनःप्राणा यथायतनं विप्रतिष्ठन्ते ; प्राणेभ्यो देवाः ; देवेभ्यो लोकाः ॥ **३४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्राणाः - जीवाः ; देवाः - इन्द्रियाणि ; लोकाः - ज्ञानानि ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -515,10 +550,11 @@ title = "०३"
 
 तस्यैषैव सिद्धिः ॥ **३५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तस्य - एवम्भूतस्य मुख्यप्राणस्य सिद्धिः - कार्यसाधकम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -529,10 +565,11 @@ title = "०३"
 
 एतद्विज्ञानम् ॥ **३६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एतस्य जीवस्य यत् विज्ञानम् , तदेव साधकम् । अथवा विज्ञानलक्षणमेतदात्मत्वं साधकमित्यर्थः ।प्राणजीवौ एकतामापन्नौ एककार्यसाधकाविति यावत् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -543,10 +580,11 @@ title = "०३"
 
 तस्यैषैव दृष्टिः ॥ **३७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तस्यैषैव दृष्टिः एतद्विजानाति इत्युक्त एवार्थोऽनेनापि वाक्येन दार्ढ्यायोक्तः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -557,10 +595,11 @@ title = "०३"
 
 यत्रैतत्पुरुष आर्तो मरिष्यन् आबल्यं न्येति मोहं न्येति, तदाहुः उदक्रमीञ्चित्तम् । नशृणोति ; न पश्यति, न वाचा वदति - अथास्मिन् प्राण एवैकधा भवति ॥ **३८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 सुप्तौ मुख्यप्राणस्येतरप्राणाप्ययोद्गमनापादानहेतुत्वमुक्त्वा मूर्छायामपि तदाह - यत्रैतत्...भवति।यदा एष पुरुषः व्याध्यादिना पीडितो मरिष्यन् आबल्यम् - अबलस्य भावं आबल्यम् बलराहित्यंन्येति -नितरामेति गच्छति । मोहं - मूर्छा न्येति - प्राप्नोति ; तदा समीपवर्तिनः आहुः, चित्तमुदक्रमीत् ।मनः निलीनमित्यर्थः । तत्र हेतुः न शृणोति न पश्यति न वाचा वदति इति । अथ - तदा अस्मिन् प्राणे - प्राणशरीरकेपरमात्मनि ऐकध्यं प्रयातीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -571,10 +610,11 @@ title = "०३"
 
 तदैनं वाक् सर्वैर्नामभिः सहाप्येति । 'चक्षुः सर्वैः रूपैः सहाप्येति, श्रोत्रंसर्वैः शब्दैः सहाप्येति, मनः सर्वैर्ध्यानैः सहाप्येति । स यदा प्रतिबुध्यते ॥ **३९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 स यदा...... प्रतिबुध्यते । आयुश्शेषौषधवशादित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -585,10 +625,11 @@ title = "०३"
 
 यथाऽग्नेः विस्फुलिङ्गा विप्रतिष्ठेरन् , एवमेवैतस्मादात्मनः प्राणाः यथायतनंविप्रतिष्ठन्ते, प्राणेभ्यो देवाः, देवेभ्यो लोकाः ॥ **४०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उत्क्रान्तावपि मुख्यप्राणस्य सर्वोपजीव्यतामाह यथाग्नेः ......लोकाः इति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -599,10 +640,11 @@ title = "०३"
 
 स यदाऽस्माच्छरीरादुत्क्रामति वागस्मात् सर्वाणि नामान्यभिविसृजते वाचासर्वाणि नामान्याप्नोति स प्राणः ॥ **४१** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 स - प्राणः यदाऽस्माच्छरीरात् उत्क्रामति, तदा वागिन्द्रियमेतच्छरीरप्रयुक्तनामाद्यभिलपनं त्यजति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -613,10 +655,11 @@ title = "०३"
 
 वाचा सर्वाणि नामान्याप्नोति ॥ **४२** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 यत्र प्राणः स्वयं तिष्ठति, तत्रैव शरीरे स्वोपकरणभूतवागिन्द्रियेण सर्वनामाभिलपनरूपं व्यवहारं करोति ।एवमुत्तरत्रापि द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -627,12 +670,13 @@ title = "०३"
 
 घ्राणजन्यज्ञानेन सर्वान् गन्धानभिविसृजते । घ्राणेन सर्वान् गन्धानाप्नोति ॥ **४३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 घ्राणजन्यज्ञानेन सर्वान् गन्धान् विषयीकरोतीत्यर्थः ॥
 
 चक्षुरस्मात् सर्वाणि रूपाण्यभिविसृजते । चक्षुषा सर्वाणि रूपाण्याप्नोति ।श्रोत्रमस्मात् - सर्वान् शब्दानभिविसृजते । श्रोत्रेण सर्वान् शब्दानाप्नोति । मनोऽस्मात्
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -643,10 +687,11 @@ title = "०३"
 
 सर्वाणि ध्यानान्यभिविसृजते । मनसा सर्वाणि ध्यानान्याप्नोति । सैषा प्राणेनसर्वाप्तिः ॥ **४४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 सर्वेषां विषयाणां प्राणाधीनेन्द्रियजन्यज्ञानविषयत्वलक्षणा प्राणकर्तृकसर्वाप्तिरित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -657,10 +702,11 @@ title = "०३"
 
 यो वै प्राणः सा प्रज्ञा या वै प्रज्ञा स प्राणः । सह ह्येतावस्मिन् शरीरेवसतः ; सहोत्क्रामतः ॥ **४५** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 उक्तोऽर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -671,12 +717,13 @@ title = "०३"
 
 अथ खलु यथा प्रज्ञायां सर्वाणि भूतान्येकीभवन्ति, तद् व्याख्यास्यामः - वागेवास्या एकमङ्गमुदूढम् , तस्या नाम पुरस्तात् प्रतिविहिता भूतमात्रा ॥ **४६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्राणस्य सर्वभूताश्रयत्वमुक्त्वा प्रज्ञाशब्दितस्य जीवस्य सर्वभूताश्रयत्व “प्रकारः” कथ्यत इत्याह - अथखलु
 
 ....... व्याख्यास्यामः इति । वागेव...... उदूढम् । अस्याः - प्रज्ञायाः वागिन्द्रियमेकमङ्गम् -उदूढं - परिगृहीतमित्यर्थः । उद्वाहकर्मभूतपत्नीवत् परिगृहीतमित्यर्थः ; वस्तुतः तस्याङ्गाभावात् । तस्यानाम...... भूतमात्रा । तस्याः - वाचः पुरस्तात् - ग्राह्यत्वेन विषयत्वेन प्रतिविहिता - प्रतिद्वंद्वितयाप्रतिनियततया विहिता भूतमात्रा नाम । एवमुत्तरत्रापि द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -687,10 +734,11 @@ title = "०३"
 
 घ्राणमेवास्या एकमङ्गमुदूढम् , तस्य गन्धः पुरस्तात् प्रतिविहिता भूतमात्रा।चक्षुरेवास्या एकमङ्गमुदूढम् । तस्य रूपं पुरस्तात् प्रतिविहिता भूतमात्रा।श्रोत्रमेवास्या एकमङ्गमुदूढम् , तस्य शब्दः पुरस्तात् प्रतिविहिता भूतमात्रा।जिह्वैवास्या एकमङ्गमुदूढम् । तस्यान्नरसः पुरस्तात् प्रतिविहिता भूतमात्रा।हस्तावेवास्या एकमङ्गमुदूढम् , तयोः कर्माणि पुरस्तात् प्रतिविहिता भूतमात्रा।शरीरमेवास्या एकमङ्गमुदूढम् , तस्य सुखदुःखे पुरस्तात् प्रतिविहिता भूतमात्रा।उपस्थ एवास्या एकमङ्गमुदूढम् , तस्यानन्दो रतिः प्रजातिः पुरस्तात् प्रतिविहिताभूतमात्रा ॥ **४७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 प्रजाति: - प्रजननमित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -701,10 +749,11 @@ title = "०३"
 
 पादावेवास्या एकमङ्गमुदूढम् ,तयोरित्याः पुरस्तात् प्रतिविहिता भूतमात्रा ॥ **४८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 इत्या: - गमनानीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -715,10 +764,11 @@ title = "०३"
 
 प्रज्ञैवास्या एकमङ्गमुदूढम् , 'तस्यै धियो विज्ञातव्यं कामाः पुरस्तात् प्रतिविहिताभूतमात्रा ॥ **४९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अथ प्रथमान्तः प्रज्ञाशब्दः मनःपरः, अस्या इति तु प्रज्ञारूपजीवपरः । उत्तरत्र, नेत्यांविजिज्ञासीत नेतारं विद्यात् इत्यनन्तरम् , न मनो विजिज्ञासीत इति मनश्शब्दप्रयोगात् स्थानप्रमाणेनप्रज्ञाशब्दस्य मन एवार्थः । धियो विज्ञातव्यम् मनोजन्यज्ञानविषयमित्यर्थः । कामाः - काम्यमानाइत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -729,10 +779,11 @@ title = "०३"
 
 प्रज्ञया वाचं समारुह्य वाचा सर्वाणि नामान्याप्नोति ॥ **५०** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवं नामगन्धरूपशब्दरसकर्मसुखदुःखानन्दगतिज्ञातव्याः दशभूतमात्राः वाग्घ्राणादिविषयत्वेनोक्त्वाप्रज्ञाशब्दितस्य जीवस्य नामादिदशविधभूतमात्राव्याप्तिप्रकारमाह - प्रज्ञाया वाचं..........। अत्र प्रज्ञाशब्दःअव्यवहितप्रज्ञाशब्दनिर्दिष्टमनःपरः । ततश्च मनसा वागिन्द्रियमधिष्ठाय तद्द्वारा सर्वाणि नामानि अभिलपनक्रियाद्वाराप्राप्नोति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -767,10 +818,11 @@ title = "०३"
 
 प्रज्ञया श्रोत्रं समारुह्य श्रोत्रेण सर्वान् शब्दानाप्नोति । प्रज्ञया जिह्वां समारुह्यसर्वानन्नरसानाप्नोति । प्रज्ञया हस्तौ समारुह्य हस्ताभ्यां 'कर्माण्याप्नोति । प्रज्ञयाशरीरं 'समारुह्य उपस्थेनाऽऽनन्दं रतिं प्रजातिमाप्नोति । प्रज्ञया पादौ समारुह्यपादाभ्यां सर्वा इत्या आप्नोति । प्रज्ञयैव धियं समारुह्य प्रज्ञयैव धियो विज्ञातव्यंकामानाप्नोति ॥ **५३** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 मनसा घ्राणेन्द्रियमधिष्ठाय तद्द्वारा सर्वान् गन्धान् आप्नोति - ज्ञानेन व्याप्नोति । एवमुत्तरत्रापिद्रष्टव्यम् , मनसा चक्षुरिन्द्रियमधिष्ठाय तद्द्वारा सर्वाणि रूपाण्याप्नोतीति ज्ञानेन व्याप्नोतीति ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -781,10 +833,11 @@ title = "०३"
 
 न हि प्रज्ञापेता वाक् नाम किञ्चन प्रज्ञापयेत् ॥ **५४** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 ननु मनोद्वारा नियमनं किमर्थमित्याशङ्क्याह - न हि.....प्रज्ञापयेता न हि मनोनधिष्ठितं वागिन्द्रियंनामप्रज्ञापनसमर्थ भवतीत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -807,10 +860,11 @@ title = "०३"
 
 न हि प्रज्ञापेतो घ्राणो गन्धं कञ्चन प्रज्ञापयेत् । अन्यत्र मे मनोऽभूदित्याह, नाहमेतंगन्धं प्राज्ञासिषमिति । न हि प्रज्ञापेतं चक्षूरूपं किञ्चन प्रज्ञापयेत् । अन्यत्र मे मनोऽभूदइत्याह, नाहमेतद्रूपं प्राज्ञासिषमिति । न हि प्रज्ञापेतं श्रोत्रं शब्दं कञ्चन प्रज्ञापयेत् ।अन्यत्र मे मनोऽभूदित्याह, नाहमेतं शब्दं प्राज्ञासिषमिति । न हि प्रज्ञापेता जिह्वाअन्नरसं कञ्चन प्रज्ञापयेत् । अन्यत्र मे मनोऽभूदित्याह, नाहमेतमन्नरसं प्राज्ञासिषमिति ।न हि प्रज्ञापेतौ हस्तौ कर्म किञ्चनप्रज्ञापयेताम् । अन्यत्र मे मनोऽभूदित्याह, नाऽहमेतत्कर्म प्राज्ञासिषमिति । न हि प्रज्ञापेतं शरीरं सुखदुःखे किञ्चन प्रज्ञापयेत् । अन्यत्र मेमनोऽभूदित्याह, नाहमेतत् सुखदुःखे प्राज्ञासिषमिति । न हि प्रज्ञापेत उपस्थः आनन्दंरति प्रजातिं कञ्चन प्रज्ञापयेत् । अन्यत्र मे मनोऽभूदित्याह, नाहमेतमानन्दं रतिं प्रजातिंप्राज्ञासिषमिति । न हि प्रज्ञापेतौ पादावित्यां काञ्चन प्रज्ञापयेताम् । अन्यत्र मे मनोऽभूदित्याह,नाहमेतामित्यां प्राज्ञासिषमिति । न हि प्रज्ञापेता धीः काचन सिद्ध्येत् ॥ **५६** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 अत्र लोकमेव साक्षित्वेनोदाहरति - अन्यत्र मे...... इति । लोको हि अन्यत्र मे मनोऽभूदित्युक्त्वा,एतन्नाम न प्राज्ञासिषम् इति ह्याह । मनोव्यासङ्गवशात् ज्ञानपूर्वकनामाभिलपनलक्षणवागिन्द्रियव्यापारोनाभूदिति हि लोकः प्रत्येतीत्यर्थः । एवमुत्तरत्रापि द्रष्टव्यम् ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -821,10 +875,11 @@ title = "०३"
 
 न प्रज्ञातव्यं प्रज्ञायेत ॥ **५७** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 एवं प्रज्ञाशब्दितस्य जीवस्य भूतमात्राव्याप्तिप्रकारकथनमुखेन आत्मानात्मविवेकं प्रदर्श्य, अन्यावाचो विमुञ्चथ (मुं.उ. २-२-५) इत्युक्तरीत्या भूतमात्राशब्दितानात्मविज्ञानं परिहर्तव्यमित्याह - नप्रज्ञातव्यं प्रज्ञायतेति । ज्ञात्रात्मव्यतिरिक्तः अनात्मभूतो विषयो न ज्ञातव्य इत्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -835,10 +890,11 @@ title = "०३"
 
 न वाचं विजिज्ञासीत ; वक्तारं विद्यात् ॥ **५८** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 तदेव प्रपञ्चयति - न वाचं...... विद्यात् इति । अत्र वाक्छब्दः प्रकरणानुगुण्यात् नामपरः ।वक्तारम् - उक्तरीत्या मनोधिष्ठितवागिन्द्रियजन्याभिलपनक्रियया नामव्याप्तारमात्मानमेव विद्यात् ।वक्तृजीवशरीरकपरमात्मानं विद्यादिति यावत् । एवमुत्तरत्रापि द्रष्टव्यम् ।
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -849,10 +905,11 @@ title = "०३"
 
 न गन्धं विजिज्ञासीत ; घातारं विद्यात् । न रूपं विजिज्ञासीत ; रूपं विद्वांसंविद्यात् ॥ **५९** ॥
 </details>
+
+<details><summary>रङ्गरामानुजः</summary>
 
 रूपं विद्वांसं रूपं पश्यन्तं विद्यादित्यर्थः ॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -864,9 +921,10 @@ title = "०३"
 न शब्दं विजिज्ञासीत ; श्रोतारं विद्यात् । नान्नरसं विजिज्ञासीत ; अन्नरसविज्ञातारंविद्यात् । न कर्म विजिज्ञासीत ; कर्तारं विद्यात् । न सुखदुःखे विजिज्ञासीत ;सुखदुःखयोर्विज्ञातारं विद्यात् । नानन्दं न रतिं न प्रजातिं विजिज्ञासीत ; आनन्दस्यरतेः प्रजातेर्विज्ञातारं विद्यात् । नेत्यां विजिज्ञासीत ; एतारं विद्यात् । न मनोविजिज्ञासीत ; मन्तारं विद्यात् । ता वा एता दशैव भूतमात्रा: अधिप्रज्ञम् , दशप्रज्ञामात्रा अधिभूतम् । यद्धि (यदि) भूतमात्रा: न स्युः, प्रज्ञामात्रा: न स्युः । यदिप्रज्ञामात्रा न स्युः, न भूतमात्राः स्युः । न ह्यन्यतरतो रूपं किञ्चन सिद्ध्येत् । नोएवैतन्नाना ॥ **६०**॥
 </details>
 
+<details><summary>रङ्गरामानुजः</summary>
+
 नामगन्धरूपशब्दरसकर्मसुखदुःखानन्दरतिप्रजातीत्याज्ञातव्यलक्षणा दश भूतमात्राश्च, तद्ग्राहिवाग्ध्राणचक्षुश्रोत्रजिह्वाहस्तशरीरोपस्थपादमनोलक्षणाः दश प्रज्ञामात्राश्चान्योन्याधाराः । वागादीन्द्रियाणां अभावेनामादिसिद्धेरभावेन वागादिलक्षणप्रज्ञामात्राधीनसिद्धिकत्वात् नामादिभूतमात्राणाम् ; नामादिभूतमात्राणामभावेतद्व्यवहारफलकप्रज्ञामात्राशब्दित इन्द्रियाद्यनिष्पत्तेः । अतो ग्राह्यग्राहकोभयाधीनत्वात् सर्वलोकयात्रायाः नोएवैतन्नाना । नानाशब्दो विनार्थकः । एतत् ग्राह्यग्राहकजातं परस्पराविनाभूतमित्यर्थः । न हि ब्राह्मेणविनाकृतं ग्राहकं, ग्राहकेण विनाकृतं ग्राह्यं कार्यक्षमं भवति । तस्मात् प्रज्ञामात्राशब्दितमतिभूतमात्रान्तर्गतमित्यर्थः॥
-
-
+</details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
