--- a/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
+++ b/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/sarva-prastutiH/03.md
@@ -16,7 +16,9 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रतर्दनो ह वै दैवोदासिरिन्द्रस्य प्रियं धामोपजगाम युद्धेन च पौरुषेण च ॥ **१**॥  
+प्रतर्दनो ह वै दैवोदासिर्  
+इन्द्रस्य प्रियं धामोपजगाम  
+युद्धेन च पौरुषेण च ॥ **१**॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -31,7 +33,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तं हेन्द्र उवाच, प्रतर्दन । वरं ददानीति ॥ **२** ॥  
+तं हेन्द्र उवाच, "प्रतर्दन । वरं ददानी"ति ॥ **२** ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -43,17 +45,22 @@ title = "०३"
 
 तं - ददानीति । स्पष्टोऽर्थः ॥
 
-स होवाच प्रतर्दनः, त्वमेव मे वरं वृणीष्व, यं त्वं मनुष्याय हिततमं मन्यसे  
+
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+स होवाच प्रतर्दनः,  
+
+> त्वम् एव मे वरं वृणीष्व,  
+यं त्वं मनुष्याय हिततमं मन्यसे  
 
 इति ॥ **३** ॥
 </details>
 
 <details><summary>मूलम्</summary>
 
-इति ॥ **३** ॥
+स होवाच प्रतर्दनः, त्वमेव मे वरं वृणीष्व, यं त्वं मनुष्याय हिततमं मन्यसे  इति ॥ **३** ॥
 </details>
 
 <details><summary>रङ्गरामानुजः</summary>
@@ -63,7 +70,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तं हेन्द्र उवाच, न वै वरं परस्मै वृणीते त्वमेव वृणीष्वेति ॥ **४** ॥
+तं हेन्द्र उवाच, "न वै वरं परस्मै वृणीते, त्वम् एव वृणीष्वे"ति ॥ **४** ॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -93,7 +100,7 @@ title = "०३"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथो खल्विन्द्रः सत्यादेव नेयाय ॥ **६** ॥
+अथो खल्व् इन्द्रः +++(ते वरं ददामीति)+++ सत्याद् +++(वाक्याद्)+++ एव नेयाय ॥ **६** ॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -103,7 +110,7 @@ title = "०३"
 
 <details><summary>रङ्गरामानुजः</summary>
 
-एवमुक्त इन्द्रः, ते वरं ददामीति सत्याद्वाक्यात् नापेतः ॥
+एवमुक्त इन्द्रः, ते वरं ददामीति सत्याद् वाक्यात् नापेतः ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
